@@ -38,6 +38,8 @@
 #include "value_classes/ValueInt.h"
 #include "value_classes/ValueString.h"
 
+#include "tinyxml.h"
+
 using namespace OpenZWave;
 
 enum DoorLockLoggingCmd
